enum GenderType {
    MALE
    FEMALE
    OTHER
}

enum RoleType {
    ADMIN
    USER
}

enum SocialEnum {
    FACEBOOK
    GOOGLE
    X
}

type SocialAccount {
    provider   SocialEnum
    providerId String
}

type Cart {
    items     CartItem[]
    updatedAt DateTime
}

type CartItem {
    productId String  @db.ObjectId
    variantId String? @db.ObjectId
    quantity  Int
}

type ShippingAddress {
    address  String
    district String
    ward     String
    province String
}

model Account {
    id          String      @id @default(auto()) @map("_id") @db.ObjectId
    email       String      @unique
    fullname    String
    phoneNumber String?     @unique
    password    String?
    address     String?
    gender      GenderType? @default(OTHER)
    dateOfBirth DateTime?
    createdAt   DateTime    @default(now())
    updatedAt   DateTime    @updatedAt
    Session     Session[]
    avatar      String?
    role        RoleType    @default(USER)

    providers SocialAccount[]

    cart Cart

    shippingAddress ShippingAddress

    orders Order[]

    favoriteProducts   Product[] @relation("FavoriteProducts", fields: [favoriteProductIds], references: [id])
    favoriteProductIds String[]  @db.ObjectId
}
