type ProductImage {
    thumbnail String
    banner    String?
    featured  String?
    other     String?
    gallery   String[]
}

model Product {
    id          String       @id @default(auto()) @map("_id") @db.ObjectId
    name        String
    title       String? // Chứa nội dung mô tả ngắn gọn về sản phẩm để SEO
    description String? // Chứa nội dung mô tả chi tiết về sản phẩm để SEO
    slug        String       @unique
    image       ProductImage // Danh sách URL hình ảnh sản phẩm
    rating      Float? // Đánh giá trung bình
    reviewCount Int?         @default(0)
    createdAt   DateTime     @default(now())
    updatedAt   DateTime     @updatedAt
    tags        String[] // Danh sách tag cho sản phẩm

    // product status
    isPublished Boolean @default(false)

    // 1 product có 1 category
    // Category of the product
    categoryId String   @db.ObjectId
    category   Category @relation(fields: [categoryId], references: [id], onDelete: NoAction, onUpdate: NoAction)

    // Attribute values for this product
    attributes ProductAttributeValue[]

    // Product variants (e.g., different sizes, colors)
    variants ProductVariant[]

    stock Int   @default(0)
    price Float @default(0)
    sold  Int   @default(0)

    isFeatured   Boolean @default(false)
    isBestSeller Boolean @default(false)

    isPromotion      Boolean   @default(false)
    promotionPercent Int?
    promotionStart   DateTime?
    promotionEnd     DateTime?

    // Users who have favorited this product
    favoritedBy    Account[] @relation("FavoriteProducts", fields: [favoritedByIds], references: [id])
    favoritedByIds String[]  @db.ObjectId
}

model ProductVariant {
    id        String  @id @default(auto()) @map("_id") @db.ObjectId
    productId String  @db.ObjectId
    product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

    sku        String                  @unique
    name       String // e.g., "500g - Red"
    attributes ProductAttributeValue[] // Giá trị các thuộc tính biến thể

    price Float
    stock Int   @default(0)
    sold  Int   @default(0)

    image ProductImage?

    isPromotion      Boolean   @default(false)
    promotionPercent Int?
    promotionStart   DateTime?
    promotionEnd     DateTime?

    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt
}
